# machine-calc

./: .gitignore  README.md  RULESET_TEST.md  SCRATCH_T026.md  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: ci.yml
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/.cache/: catalog-ebf165086500aab1-metadata.json  catalog-ebf165086500aab1.json  catalog-metadata.json
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
.specify/workflows/: workflow-registry.json
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree
docs/_build/html/_sources/: index.rst.txt
docs/source/: conf.py
scripts/: check_maintainability.py
specs/001-metal-drilling-calc/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-metal-drilling-calc/checklists/: calculation-rigor.md  i18n.md  requirements.md
specs/001-metal-drilling-calc/contracts/: cli-repl.md  library-api.md
specs/002-constrained-calculation-modes/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-constrained-calculation-modes/checklists/: calculation-rigor.md  mode-ux.md  requirements.md
specs/002-constrained-calculation-modes/contracts/: cli-repl-delta.md  library-api-delta.md
specs/003-ci-quality-security-gates/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-ci-quality-security-gates/checklists/: gates.md  requirements.md
specs/003-ci-quality-security-gates/contracts/: ci-checks-contract.md
specs/004-pr-quality-check-summary/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-pr-quality-check-summary/checklists/: requirements.md
specs/004-pr-quality-check-summary/contracts/: pr-summary-comment-contract.md
specs/005-configurable-materials-tools/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-configurable-materials-tools/checklists/: requirements.md
specs/005-configurable-materials-tools/contracts/: library-cli-extensions.md  materials-config-schema.md
specs/006-legacy-hardware-performance-tests/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-legacy-hardware-performance-tests/checklists/: requirements.md
specs/006-legacy-hardware-performance-tests/contracts/: ci-performance-job-contract.md  performance-suite-contract.md
src/machine_calc/: __init__.py  __main__.py  cli.py  config.py  i18n.py  logging_setup.py  models.py  registry.py  registry_config.py  units.py  validation.py
src/machine_calc/data/: __init__.py  materials.toml
src/machine_calc/locales/: __init__.py  en.py
src/machine_calc/operations/: __init__.py
src/machine_calc/operations/drilling/: __init__.py  formulas.py  tools.py
tests/contract/: test_cli_contract.py  test_library_api_fixed_rpm.py  test_library_api_fixed_rpm_errors.py  test_library_api_power_constrained.py  test_library_api_power_constrained_errors.py  test_library_cli_extensions.py  test_materials_config_schema.py  test_mode_conflict.py
tests/integration/: test_cli_edge_cases.py  test_cli_fixed_rpm.py  test_cli_flow.py  test_cli_loop.py  test_cli_materials_config.py  test_cli_mode_prompt_ux.py  test_cli_power_constrained.py  test_cli_validation.py  test_fixed_rpm_feasibility.py  test_identical_results_modes.py  test_locale_env.py  test_main_entrypoint.py  test_packaging_bundled_data.py  test_power_constrained_noop.py
tests/performance/: budgets.py  conftest.py  harness.py  results.py  test_calculation_budgets.py
tests/static/: test_no_hardcoded_strings.py
tests/unit/operations/drilling/: test_calculate.py  test_formulas.py  (+2 more)
tests/unit/shared/: test_config.py  test_i18n.py  test_registry.py  test_registry_config.py  test_units.py  test_validation.py  test_validation_modes.py
(+2 files in other folders)
