[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "machine-calc"
version = "0.1.0"
description = "Metal machining calculation library and interactive CLI, starting with drilling operations."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "kniklas" }]
keywords = ["machining", "drilling", "cnc", "manufacturing", "calculator"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Manufacturing",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "black>=24.0",
    "setuptools>=83.0.0",
    "sphinx>=7.0",
    "mypy>=1.10",
    "radon>=6.0",
    "xenon>=0.9",
    "bandit>=1.7",
    "pip-audit>=2.7",
]

[project.scripts]
machine-calc = "machine_calc.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=machine_calc --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["machine_calc"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "C90"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
files = ["src/machine_calc"]
warn_return_any = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]
# Only surface medium+ severity findings in CI (FR-004); any future named-skip
# suppressions (`# nosec`) must carry a trailing rationale comment per
# contracts/ci-checks-contract.md's Suppression contract (FR-009).

# Maintainability Index (FR-002) is enforced via xenon, which has no native
# pyproject.toml configuration section. Its thresholds are versioned here as
# the CLI invocation itself (research.md #2):
#   xenon --max-absolute B --max-modules A --max-average A src/
